add swagger for new filds
