# storage/api-docs/api-docs.json
@@ -315,6 +315,22 @@
                         }
                     },
                     {
+                        "name": "bonuce",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "price",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
                         "name": "status",
                         "in": "query",
                         "required": true,
